--- a/404.html
+++ b/404.html
@@ -1,47 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>404 - Page Not Found | Dalek Linear Evolution</title>
-  <style>
-    body {
-      font-family: 'Courier New', monospace;
-      background: #000;
-      color: #a1a1aa;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      margin: 0;
-    }
-    .container {
-      text-align: center;
-      padding: 40px;
-    }
-    h1 {
-      font-size: 72px;
-      color: #dc2626;
-      margin: 0 0 20px 0;
-    }
-    p {
-      font-size: 14px;
-      margin: 10px 0;
-    }
-    a {
-      color: #dc2626;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h1>404</h1>
-    <p>Page not found. The evolution continues elsewhere.</p>
-    <p><a href="./">← Return to Home</a></p>
-  </div>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>404 - Page Not Found | Dalek Linear Evolution</title><style>body{font-family:'Courier New',monospace;background:#000;color:#a1a1aa;display:flex;justify-content:center;align-items:center;min-height:100vh;margin:0}.container{text-align:center;padding:40px}h1{font-size:72px;color:#dc2626;margin:0 0 20px}p{font-size:14px;margin:10px 0}a{color:#dc2626;text-decoration:none}a:hover{text-decoration:underline}</style></head><body><div class="container"><h1>404</h1><p>Page not found. The evolution continues elsewhere.</p><p><a href="./">â†  Return to Home</a></p></div></body></html>
