--- a/404.html
+++ b/404.html
@@ -3,45 +3,74 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>404 - Page Not Found | Dalek Linear Evolution</title>
+  <title>404 - Extermination Signal Lost | Dalek Linear Evolution</title>
   <style>
+    :root {
+      --color-background: #000;
+      --color-text: #a1a1aa; /* Zinc-400 equivalent */
+      --color-accent: #dc2626; /* Red-600 equivalent */
+      --font-family: 'Courier New', monospace;
+    }
     body {
-      font-family: 'Courier New', monospace;
-      background: #000;
-      color: #a1a1aa;
+      font-family: var(--font-family);
+      background: var(--color-background);
+      color: var(--color-text);
       display: flex;
       justify-content: center;
       align-items: center;
       min-height: 100vh;
       margin: 0;
+      overflow: hidden;
+      line-height: 1.6;
+    }
+    .glitch-effect {
+        animation: flicker 0.01s infinite alternate;
+    }
+    @keyframes flicker {
+        0% { opacity: 0.99; filter: drop-shadow(0 0 1px var(--color-accent)); }
+        50% { opacity: 1; }
+        100% { opacity: 0.98; filter: drop-shadow(0 0 0.5px var(--color-accent)); }
     }
     .container {
       text-align: center;
       padding: 40px;
+      border: 1px solid var(--color-accent);
+      box-shadow: 0 0 10px rgba(220, 38, 38, 0.5);
     }
-    h1 {
-      font-size: 72px;
-      color: #dc2626;
-      margin: 0 0 20px 0;
+    .status-code {
+      font-size: 8rem;
+      color: var(--color-accent);
+      margin: 0 0 0.5rem 0;
+      text-shadow: 0 0 5px var(--color-accent);
     }
-    p {
-      font-size: 14px;
-      margin: 10px 0;
+    .message {
+      font-size: 1rem;
+      margin: 1rem 0 2rem 0;
+      color: var(--color-text);
+      letter-spacing: 2px;
     }
-    a {
-      color: #dc2626;
+    .home-link {
+      color: var(--color-accent);
       text-decoration: none;
+      font-weight: bold;
+      transition: color 0.3s;
+      display: inline-block;
+      padding: 5px 10px;
+      border: 1px solid transparent;
     }
-    a:hover {
-      text-decoration: underline;
+    .home-link:hover {
+      color: var(--color-text);
+      border-color: var(--color-accent);
+      box-shadow: 0 0 5px var(--color-accent);
+      background: rgba(220, 38, 38, 0.1);
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>404</h1>
-    <p>Page not found. The evolution continues elsewhere.</p>
-    <p><a href="./">← Return to Home</a></p>
+  <div class="container glitch-effect">
+    <h1 class="status-code">404</h1>
+    <p class="message">EXCLUDED. The requested node is not part of the linear evolution path.</p>
+    <p><a href="/" class="home-link" aria-label="Return to the core interface">← RETURN_TO_CORE</a></p>
   </div>
 </body>
 </html>
